--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.4.0",
     "react-select-2": "^2.0.11",
     "react-tabs": "^5.1.0",
+    "react-whatsapp": "^0.3.0",
     "recoil": "^0.7.4",
     "sass": "^1.52.3",
     "state": "^0.2.0",
